# trishul-2

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
core/: app.py  db.py  dependencies.py  exceptions.py  plugin_registry.py  plugins_registry_router.py  query_router.py
core/auth/: apikey_store.py  jwt_handler.py  middleware.py  models.py  router.py
core/bus/: client.py  publisher.py  streams.py
core/config/: settings.py
core/health/: router.py
core/middleware/: error_handler.py  logging.py  rate_limit.py
core/models/: __init__.py  base.py  envelope.py  responses.py
core/notifications/: service.py
core/storage/: base.py  factory.py  influxdb.py  victorialogs.py
core/ws/: router.py
docs/: architecture.md  phase-1-core-foundation.md  phase-2-transformer-engine.md  phase-3-protocol-plugins.md  phase-4-shell-ui.md  phase-5-protocol-uis.md  phase-6-observability.md
plugins/avro/: __init__.py  config.py  models.py  pipeline.py  plugin.py  router.py  simulator.py
plugins/protobuf/: __init__.py  config.py  models.py  pipeline.py  plugin.py  router.py  simulator.py
plugins/sftp/: __init__.py  config.py  models.py  pipeline.py  plugin.py  router.py  simulator.py
plugins/shared/: simulator_base.py
plugins/snmp/: __init__.py  config.py  models.py  pipeline.py  plugin.py  router.py  simulator.py
plugins/ves/: __init__.py  config.py  models.py  pipeline.py  plugin.py  router.py  simulator.py
plugins/webhook/: __init__.py  config.py  models.py  plugin.py  router.py  simulator.py
tests/: conftest.py  test_auth.py  test_decoders.py  test_encoders.py  test_envelope.py  test_health.py  test_models.py  test_pipeline.py  test_plugin_simulators.py  test_plugin_snmp.py  test_plugin_ves.py  test_webhook_plugin.py  test_writers.py
transformer/: base.py  normalizer.py  pipeline.py  router.py  schema_registry.py
transformer/decoders/: avro.py  csv.py  json.py  protobuf.py  snmp.py  ves.py  xml.py
transformer/encoders/: avro.py  csv.py  json.py  protobuf.py
transformer/readers/: file.py  http_poll.py  nats.py  sftp.py  webhook.py
transformer/writers/: csv.py  influxdb.py  nats.py  sftp.py  victorialogs.py  webhook.py
ui/mfe/: Dockerfile.mfe  Makefile  nginx.conf
ui/mfe/fm-console/: index.html  package.json  vite.config.ts
ui/mfe/fm-console/src/: FmConsoleModule.tsx  main.tsx  useWsEvents.ts
ui/mfe/log-viewer/: index.html  package.json  vite.config.ts
ui/mfe/log-viewer/src/: LogViewerModule.tsx  main.tsx
ui/mfe/pm-dashboard/: index.html  package.json  vite.config.ts
ui/mfe/pm-dashboard/src/: PmDashboardModule.tsx  main.tsx  useWsEvents.ts
ui/mfe/protobuf-ui/: index.html  package.json  vite.config.ts
ui/mfe/protobuf-ui/src/: ProtobufModule.tsx  main.tsx
ui/mfe/sftp-avro-ui/: index.html  package.json  vite.config.ts
ui/mfe/snmp-ui/: index.html  package.json  vite.config.ts
ui/mfe/ves-ui/: index.html  package.json  vite.config.ts
ui/mfe/webhook-ui/: index.html  package.json  vite.config.ts
ui/shared/design-system/: components.tsx  tokens.ts
ui/shell/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.ts  vite.config.ts
ui/shell/src/: App.tsx  index.css  main.tsx
(+29 files in other folders)
