[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trishul"
version = "1.0.0"
description = "FCAPS Simulation, Parsing & Visualization Platform"
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.20",

    # Data validation
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",

    # Auth — PyJWT replaces python-jose (no utcnow() deprecation warnings)
    "PyJWT[crypto]==2.10.1",
    "passlib[bcrypt]==1.7.4",

    # Database (SQLite ORM)
    "sqlmodel==0.0.21",
    "aiosqlite==0.20.0",

    # NATS
    "nats-py==2.9.0",

    # Redis
    "redis[hiredis]==5.2.1",

    # InfluxDB
    "influxdb-client[async]==1.47.0",

    # HTTP client (VictoriaLogs + WebhookWriter)
    "httpx==0.28.1",

    # Structured logging
    "structlog==24.4.0",

    # Prometheus metrics
    "prometheus-fastapi-instrumentator==7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",        # TestClient
    "anyio==4.7.0",
    "ruff==0.8.6",
    "mypy==1.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["core", "transformer", "plugins"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths     = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
